# opensaf-samples

./: .gitmodules  Dockerfile  Makefile  Makefile.am  Makefile.common  Makefile.in  README  README.md  bootstrap.sh  config.h  config.h.in  config.status  configure  configure.ac
amf/: Makefile  Makefile.am  Makefile.in  README
amf/campaigns/: NwayInstallationCampaign.xml  README
amf/non_sa_aware/: Makefile  Makefile.am  Makefile.in  net-snmp-longDN.xml  net-snmp.xml
amf/proxy/: Makefile  Makefile.am  Makefile.in  README  proxied.xml  proxied_script  proxy  proxy-longDN.xml  proxy.c  proxy.xml  proxy_script  test.sh
amf/proxy/.deps/: proxy-proxy.Po
amf/sa_aware/: AppConfig-2N-longDN.xml  AppConfig-2N.xml  AppConfig-nwayactive-longDN.xml  AppConfig-nwayactive.xml  Makefile  Makefile.am  Makefile.in  README  amf_demo  amf_demo.c  amf_demo_script
amf/sa_aware/.deps/: amf_demo-amf_demo.Po
amf/wrapper/: Makefile  Makefile.am  Makefile.in  README  net-snmp-longDN.xml  net-snmp.xml  wrapper  wrapper.c  wrapper.sh
amf/wrapper/.deps/: wrapper-wrapper.Po
autom4te.cache/: output.1  requests  traces.0  traces.1
cpsv/: Makefile  Makefile.am  Makefile.in  README
cpsv/ckpt_demo/: Makefile  Makefile.am  Makefile.in  ckpt_demo  cpsv_main_app.c  cpsv_test_app.c
cpsv/ckpt_demo/.deps/: ckpt_demo-cpsv_main_app.Po  ckpt_demo-cpsv_test_app.Po
cpsv/ckpt_track_demo/: Makefile  Makefile.am  Makefile.in  ckpt_track_demo  cpsv_main_track_app.c  cpsv_test_track_app.c
cpsv/ckpt_track_demo/.deps/: ckpt_track_demo-cpsv_main_track_app.Po  ckpt_track_demo-cpsv_test_track_app.Po
cpsv/go-cpsv/: Makefile  Makefile.in  cpsv_test_app.c  go-cpsv  go-cpsv.h  main.go
cpsv/go-cpsv/.deps/: ckpt_demo-cpsv_main_app.Po  ckpt_demo-cpsv_test_app.Po
edsv/: Makefile  Makefile.am  Makefile.in  edsv_demo_app.c  edsv_demo_app.h  edsv_demo_main.c  evt_demo
edsv/.deps/: evt_demo-edsv_demo_app.Po  evt_demo-edsv_demo_main.Po
glsv/: Makefile  Makefile.am  Makefile.in  glsv_demo_app.c  glsv_main_app.c  lck_demo
glsv/.deps/: lck_demo-glsv_demo_app.Po  lck_demo-glsv_main_app.Po
immsv/: OpensafImm_Upgrade_4.5.xml  OpensafImm_Upgrade_5.0.xml  OpensafImm_Upgrade_5.1.xml  README  immsv_test_classes.xml  immsv_test_classes_rtobj.xml
immsv/immom_python/: README  immom.py  immombin.c  immomexamples.py  immomtest.py
immsv/immutils/: immutil.c  immutil.h
mqsv/: Makefile  Makefile.am  Makefile.in  mqsv_demo_app.c  mqsv_main_app.c  msg_demo
mqsv/.deps/: msg_demo-mqsv_demo_app.Po  msg_demo-mqsv_main_app.Po
smfsv/: Makefile  Makefile.am  Makefile.in  README  README-AGENT-DEMO  campaign_howtowrite.xml  campaign_script.sh  offline_install.sh  offline_remove.sh  online_install.sh  online_remove.sh  smf_demo.c  smf_demo_agent
smfsv/.deps/: smf_demo_agent-smf_demo.Po
smfsv/campaigns/: Makefile  Makefile.am  Makefile.in  README  campaign_TestRollback.xml  campaign_increase_demoapp.xml  campaign_install_demoapp.xml  campaign_remove_demoapp.xml  campaign_remove_demoapp2.xml  campaign_rolling_comp.xml  campaign_rolling_comp_agent.xml  campaign_rolling_nodes.xml  campaign_rolling_nodes_callback_receiver.xml  campaign_rolling_nodes_os_installremove.xml  campaign_rolling_su.xml  campaign_single_comp.xml  campaign_single_node.xml  install_bundles_testcampaign.xml  remove_bundles_testcampaign.xml  smf-verify  smfsv_test_classes.xml
