#      -*- OpenSAF  -*-
#
# (C) Copyright 2010 The OpenSAF Foundation
# Copyright Ericsson AB 2017 - All Rights Reserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE. This file and program are licensed
# under the GNU Lesser General Public License Version 2.1, February 1999.
# The complete license can be accessed from the following location:
# http://opensource.org/licenses/lgpl-license.php
# See the Copying file included with the OpenSAF distribution for full
# licensing terms.
#
# Author(s): Wind River Systems 
#

include $(top_srcdir)/Makefile.common

MAINTAINERCLEANFILES = Makefile.in

bin_PROGRAMS = msg_demo

msg_demo_CPPFLAGS = \
	-DNCS_SAF=1 \
	$(AM_CPPFLAGS)

msg_demo_SOURCES = \
	mqsv_demo_app.c \
	mqsv_main_app.c

msg_demo_LDADD = \
	@SAF_AIS_MSG_LIBS@

msg_demo_LDFLAGS = \
	-pthread
